:feat: metodos iniciais de assinatura

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -40,14 +40,15 @@
         Assinar <i class="fa fa-signature"></i>
       </button>
       <button
-        id="bot-smartpass"
+        id="bot-concluir-smartpass"
         accesskey="s"
-        onclick="javascript: assinarViaSmartPass();"
+        onclick="javascript: providerSmartPass.assinar();"
         class="btn btn-primary mr-2"
         role="button"
       >
         SmartPass <i class="fa fa-signature"></i>
       </button>
+
       <input type="file" id="fileToUpload" />
 
       <ul id="log" style="margin-top: 2em"></ul>
